using @input decarator to shre data from parent to child

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  hello world
-</h1>
+<!-- <app-usingbinding></app-usingbinding>
+<hr>
+<app-one-way-binding></app-one-way-binding>
+<hr>
+<app-showusers></app-showusers> -->
+<app-students></app-students>
+
